# job-automation

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements-dashboard.txt  requirements.txt
claude-exports/: cowork_drain_ready_queue.txt
config/: runtime.json  trusted_domains.json
config/applicant/: applicant_master_answers.md
config/search/: approved_industries.md  approved_role_domains.md  reject_rules.json  search_filters.json  titles.txt
dashboard/: __main__.py  app.py  config_io.py  data_io.py
dashboard/pages/: admin.py  applicant.py  overview.py  runs.py  search_prefs.py
data/: .sheets_synced.json
docker/: crontab  dashboard.Dockerfile  entrypoint.sh
docs/: architecture.md  dashboard_spec.md  prompts.md  security.md  setup.md  state-machine.md  workflow-spec.md
docs/api-docs/: jobapi-docs.md  jobapi-example-request.txt  jobapi-example-response.txt
docs/claude/: COWORK_SKILLS_SPEC_PATCH.md  SCHEMA_UPDATE_BRIEF.md  SPEC.md  faulty-description.md
docs/new-api-docs/: apify-docs-inputs.md  apify-docs-readme.md  apify-example-input.json  apify-python-api.py
n8n/credentials/: README.md
n8n/workflows/: 01_ingest_jobs.json  02_screen_jobs.json  (+3 more)
schemas/: application_packet.schema.json  cover_letter_request.schema.json  intervention_report.schema.json  normalized_job.schema.json  reject_rules.schema.json  run_log.schema.json  runtime.schema.json  screening_decision.schema.json  search_filters.schema.json
scripts/: __init__.py
sheets/: schema.md
tests/: conftest.py
(+61 files in other folders)
